// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Ads Snapshots should correctly render an AMP leaderboard ad 1`] = `
.emotion-8 {
  background-color: #F8F8F8;
  margin-top: 0.5rem;
}

.emotion-6 {
  display: none;
  visibility: hidden;
}

@media (min-width:20rem) {
  .emotion-6 {
    min-height: 5.1875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    visibility: visible;
  }
}

@media (min-width:63rem) {
  .emotion-6 {
    min-height: 17.6875rem;
  }
}

.emotion-4 {
  margin: 0 auto;
  text-align: center;
}

.amp-geo-pending .emotion-2,
.amp-geo-group-gbOrUnknown .emotion-2 {
  display: none;
  visibility: hidden;
}

.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #5A5A5A;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  padding: 0.5rem 0;
  text-align: right;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <section
    aria-hidden="true"
    aria-label="Publicités"
    class="emotion-8 emotion-9"
    data-e2e="advertisement"
    role="region"
  >
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          amp-access="toggles.ads.enabled"
          amp-access-hide="true"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-0 emotion-1"
            dir="ltr"
            href="https://www.bbc.com/usingthebbc/cookies/"
            tabindex="-1"
          >
            Publicités
          </a>
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="320x50,300x50"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="50"
            json="{\\"targeting\\":{\\"slot\\":\\"leaderboard\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"afrique\\"}}"
            media="(max-width: 62.9375rem)"
            type="doubleclick"
            width="320"
          />
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="970x250,728x90"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="250"
            json="{\\"targeting\\":{\\"slot\\":\\"leaderboard\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"afrique\\"}}"
            media="(min-width: 63rem)"
            type="doubleclick"
            width="970"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`AMP Ads Snapshots should correctly render an AMP mpu ad 1`] = `
.emotion-8 {
  background-color: #F8F8F8;
  margin-top: 0.5rem;
}

.emotion-4 {
  margin: 0 auto;
  text-align: center;
}

.amp-geo-pending .emotion-2,
.amp-geo-group-gbOrUnknown .emotion-2 {
  display: none;
  visibility: hidden;
}

.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #5A5A5A;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  display: block;
  padding: 0.5rem 0;
  text-align: right;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 {
  display: none;
  visibility: hidden;
  padding: 0;
}

@media (min-width:18.75rem) {
  .emotion-6 {
    min-height: 17.6875rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    visibility: visible;
  }
}

<div>
  <section
    aria-hidden="true"
    aria-label="Publicités 2"
    class="emotion-8 emotion-9"
    data-e2e="advertisement"
    role="region"
  >
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          amp-access="toggles.ads.enabled"
          amp-access-hide="true"
          class="emotion-2 emotion-3"
        >
          <a
            class="emotion-0 emotion-1"
            dir="ltr"
            href="https://www.bbc.com/usingthebbc/cookies/"
            tabindex="-1"
          >
            Publicités
          </a>
          <amp-ad
            data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"
            data-amp-slot-index="0"
            data-block-on-consent="default"
            data-multi-size="300x250"
            data-npa-on-unknown-consent="true"
            data-slot="/4817/bbccom.test.site.amp.news"
            height="250"
            json="{\\"targeting\\":{\\"slot\\":\\"mpu\\",\\"asset_type\\":\\"index\\",\\"channel\\":\\"afrique\\"}}"
            type="doubleclick"
            width="300"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;
